<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jade Chat</string>
    <string name="app_title_main">Jade Chat</string>
    <string name="app_title_settings">Jade Chat Settings</string>
    <string name="app_title_chat">Jade Chat Room</string>
    <string name="app_title_participants">Jade Chat Participants</string>
    <string name="label_nick">Enter Nickname</string>
    <string name="label_host">Host</string>
    <string name="label_port">Port</string>
    <string name="button_login">  register!  </string>
    <string name="button_send">send!</string>
    <string name="button_use">  use  </string>
    <string name="menu_settings">settings</string>
    <string name="menu_exit">exit</string>
    <string name="menu_participants">participants</string>
    <string name="menu_clear">clear</string>
    <string name="msg_connecting_to">Connecting to</string>
    <string name="msg_nickname_in_use">Nickname already in use!</string>
    <string name="msg_nickname_not_valid">Invalid nickname!</string>
    <string name="msg_unexpected">Unexpected error!</string>
    <string name="msg_interface_exc">Internal error!</string>
    <string name="msg_controller_exc">Server error!</string>
    <string name="title_activity_main"> main </string>
    <string name="button_sensorState"> send sensor state </string>
    <string name="editText_receiverName"> receiver name </string>
    <string name="editText_price"> input your price </string>
    <string name="button_sendPrice"> offer </string>
    <string name="button_getPrice"> get best </string>
    <string name="title_activity_offerts">OffertsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="listViewButton">Show offerts</string>
    <string name="maxOffertsLabel">Max number of offerts</string>
    <string name="minOffertsLabel">Min number of offerts</string>
    <string name="mode">MODE {1,2,3}</string>
</resources>