<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent" android:weightSum="1">

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/label_nick"
	    android:textSize="10sp" />

	<EditText
	    android:id="@+id/edit_nickname"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content" >

		<requestFocus></requestFocus>
	</EditText>

	<TextView
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/mode" 	    
	    android:textSize="10sp" />

	<EditText
	    android:id="@+id/edit_mode"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number" />

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/maxOffertsLabel"
	    android:textSize="10sp" />

	<EditText
	    android:id="@+id/edit_param1"
	    android:layout_width="90dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:ems="10"
	    android:inputType="number" />

	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/minOffertsLabel"
	    android:textSize="10sp" />

	<EditText
	    android:id="@+id/edit_param2"
	    android:layout_width="90dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center_horizontal"
	    android:ems="10"
	    android:inputType="number" />

	<Button
	    android:id="@+id/button_chat7"
	    android:layout_width="wrap_content"
	    android:layout_height="25dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/button_login"
	    android:textSize="10sp" >
</Button>

	<Button
	    android:id="@+id/button_getBestPrice"
	    android:layout_width="wrap_content"
	    android:layout_height="25dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/button_getPrice"
	    android:textSize="10sp" >
</Button>

	<TextView android:layout_height="wrap_content" android:id="@+id/infoTextView"
		android:layout_width="wrap_content" android:text="info"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/priceTextView"
		android:layout_width="wrap_content" android:text="info"></TextView>
	<TextView android:layout_height="wrap_content" android:id="@+id/addressInfoTextView"
		android:layout_width="wrap_content" android:text="Enter address (blank if 192.168.1.100)"></TextView>
	<EditText android:layout_height="wrap_content"
		android:layout_width="match_parent" android:id="@+id/edit_address">
		
	</EditText>

	<Button
	    android:id="@+id/lsitViewButton"
	    android:layout_width="wrap_content"
	    android:layout_height="25dp"
	    android:layout_gravity="center_horizontal"
	    android:text="@string/listViewButton" 
	   	android:textSize="10sp" />

</LinearLayout>
